tests/paczka2/big_fuzzy/64043002.err
Error in line 3: uBLwoGyi0Y A784 99,5
Error in line 7: vOkSB7 S605 49,3
Error in line 8: vOkSB7 A804 76,0
Error in line 12: iYj A804 22,1
Error in line 6: uBLwoGyi0Y A804 10,8
Error in line 21: iYj A784 -2,9
Error in line 18: iYj A784 53,7
Error in line 20: uBLwoGyi0Y S605 32,0
Error in line 24: uBLwoGyi0Y A804 40,6
Error in line 19: S605 S124 38,5
Error in line 35: S605 S124 69,2
Error in line 41: uBLwoGyi0Y A804 51,2
Error in line 55: uBLwoGyi0Y A784 25,7
Error in line 50: iYj A784 10,5
Error in line 59: uBLwoGyi0Y S124 91,0
Error in line 80: awivbTuF S124 45,6
Error in line 95: awivbTuF A784 125,1
Error in line 100: awivbTuF A804 18,1
Error in line 108: s9ohI7JEJ S605 53,0
Error in line 110: uBLwoGyi0Y A804 2,2
Error in line 125: vOkSB7 A804 42,0
Error in line 122: uBLwoGyi0Y S605 39,3
Error in line 128: iYj A804 58,5
Error in line 136: iYj A784 84,0
Error in line 143: s9ohI7JEJ S124 89,3
Error in line 147: s9ohI7JEJ A804 50,9
Error in line 152: uBLwoGyi0Y A784 9,3
Error in line 155: uBLwoGyi0Y S124 75,8
Error in line 124: S605 S605 79,5
Error in line 162: S605 A804 26,3
Error in line 165: S605 S605 47,5
Error in line 161: iYj A804 7,7
Error in line 159: awivbTuF S605 50,0
Error in line 166: S605 A804 75,1
Error in line 151: s9ohI7JEJ S124 33,3
Error in line 193: iYj A804 82,6
Error in line 196: awivbTuF S605 64,6
Error in line 197: awivbTuF A804 28,1
Error in line 203: uBLwoGyi0Y S124 22,8
Error in line 209: S605 S605 70,0
Error in line 205: uBLwoGyi0Y A804 99,3
Error in line 218: uBLwoGyi0Y S605 -1,9
Error in line 220: S605 A784 44,7
Error in line 222: S605 A804 80,8
Error in line 228: uBLwoGyi0Y S605 321,6
Error in line 226: iYj S124 2,9
Error in line 237: iYj A784 56,3
Error in line 241: iYj S605 85,0
Error in line 230: uBLwoGyi0Y A784 98,6
